bug:fix overflow issue of datagrid component

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,6 +1,6 @@
 @import "./variables.scss";
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -11,23 +11,23 @@ a {
   color: inherit;
 }
 
-.main{
-  font-family: "Inter",sans-serif;
+.main {
+  font-family: "Inter", sans-serif;
   background-color: $main-bg;
   color: $main-color;
 }
 
-.container{
+.container {
   display: flex;
 }
 
-.menuContainer{
+.menuContainer {
   width: 250px;
   padding: 5px 20px;
   border-right: 2px solid $soft-bg;
 }
 
-.contentContainer{
+.contentContainer {
   padding: 5px 20px;
-  width: 100%;
+  max-width: calc(100vw - 250px);
 }
